# cw-skeleton

./: README.md
contracts/cw-skeleton/: Cargo.toml  README.md
contracts/cw-skeleton/.cargo/: config
contracts/cw-skeleton/schema-maker/: schema.rs
contracts/cw-skeleton/src/: errors.rs  lib.rs  msgs.rs  state.rs
contracts/cw-skeleton/src/entry_points/: execute.rs  instantiate.rs  query.rs
contracts/cw-skeleton/src/entry_points/execute/: my_execute.rs
contracts/cw-skeleton/src/entry_points/query/: config.rs
contracts/cw-skeleton/src/tests/: contracts.rs  core_tests.rs  mod.rs
